app/files/css/node.css
#nodes {
  float: left;
  height: 100%;
  width: 21em;
  padding: 1em;
  overflow-y: scroll;
}

.node {
  border: 1px solid #333;
  padding: 0.2em;
  border-radius: 15px;
  box-shadow: 0px 0px 5px #555;
  margin-bottom: 1em;
  width: 18em;
}

#nodes.maximized .node {
  display: inline-block;
  margin: 1em;
}

.node .status {
  width: 1em;
  height: 1em;
  display: inline-block;
  background-color: #9d9;
  border-radius: 1em;
  vertical-align: middle;
  visibility: hidden;
}

.node.ping .status {
  visibility: visible;
}

#nodes.minimized .node tr.memory th {
  display: none;
}

#nodes.minimized .node tr.cpu th {
  display: none;
}

#nodes.minimized .node tr.load th {
  display: none;
}

#nodes.minimized .node tr.load td {
  display: none;
}

#nodes.minimized .node tr.disk-stats {
  display: none;
}

#nodes.minimized .node tr.filesystem-stats {
  display: none;
}

#nodes.minimized .node .hostname {
}

.node.highlight {
  box-shadow: 0px 0px 10px #dd9;
}

.node h2 {
  font-size: 1em;
  padding-left: 0.4em;
  padding-right: 0.4em;
  width: calc(100% - 5.4em);
}

.maximized .node h2 {
  font-size: 1.2em;
}

.node h3 {
  font-size: 1.0em;
}

.node .hostname {
  font-family: monospace;
  display: inline-block;
  text-transform: uppercase;
  color: #ddd;
}

.maximized .status {
  position: absolute;
  margin: 0.4em;
}

.maximized .node .hostname {
  text-align: center;
  padding: 0.2em;
  font-size: 1.0em;
  margin: 0.4em auto;
  display: block;
}

.node .badge {
  margin: 0.2em;
}

.node .alert {
  padding: 0.2em;
  margin: 0.2em;
}

